--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -10,6 +10,8 @@
     --input-box-shadow: rgba(194, 195, 214, 0.50);
     --input-color: #494c68;
     --button-color: #494c68;
+    --bg-main: #e3e4f1;
+    --bg-tarefas: #fff;
 }
 
 header {
@@ -57,4 +59,14 @@ header form button {
     border: none;
     background: var(--button-color);
     color: #fff;
+}
+
+main {
+    background: var(--bg-main);
+    min-height: calc(100vh - 12.5rem);
+    padding-inline: 1.5rem;
+}
+
+.tarefas {
+    background: var(--bg-tarefas);
 }
