--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -13,5 +13,35 @@
             </form>
 
         </div>
+         <div class="tarefa">
+            <form action="">
+               <div>
+                 <input type="radio" id="tarefa-1">
+                 <label for="tarefa-1">Completar curso de Javascript</label>
+               </div>
+
+                <button>
+                    <img src="/imagens/x-icon.png" alt="ícone de x para excluir uma tarefa">
+                </button>
+            </form>
+
+        </div>
+         <div class="tarefa">
+            <form action="">
+               <div>
+                 <input type="radio" id="tarefa-1">
+                 <label for="tarefa-1">Completar curso de Javascript</label>
+               </div>
+
+                <button>
+                    <img src="/imagens/x-icon.png" alt="ícone de x para excluir uma tarefa">
+                </button>
+            </form>
+
+        </div>
+        <div class="informações">
+            <p>5 tarefas ativas</p>
+            <a href="">Limpar tarefas</a>
+        </div>
     </section>
 </main>
