--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -113,4 +113,11 @@ main {
     padding: 1rem 1.5rem;
     display: flex;
     justify-content: space-between;
+    font-size: 0.75rem;
+    color: var(--info-text-color);
+}
+
+.informações a {
+    text-decoration: none;
+    color: var(--info-text-color);
 }
