Primeiros ajustes do desktop

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -40,7 +40,14 @@
 
         </div>
         <div class="informações">
-            <p>5 tarefas ativas</p>
+            <p>5 tarefas ativas</p> 
+
+            <div class="botoes">
+                <a href="">Todas</a>
+                <a href="">Ativas</a>
+                <a href="">Completas</a>
+            </div>
+            
             <a href="">Limpar tarefas</a>
         </div>
     </section>
