--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -7,15 +7,20 @@
 
 :root {
     --bg-header-mobile: url(../imagens/bg-header-mobile-light.png);
+    --bg-header-desktop: url(../imagens/bg-header-desktop-light.png);
     --input-box-shadow: rgba(194, 195, 214, 0.50);
     --input-color: #494c68;
-    --button-color: #494c68;
+    --placeholder-color: #9495a5;
+    --button-color: #393a4b;
+    --button-color-hover: #494c68;
     --bg-body: #fafafa;
     --bg-tarefas: #fff;
     --box-shadow: 0px 35px 50px -15px rgba(194, 195, 214, 0.50);
     --border-color: #e3e4f1;
     --text-color: #494c6b;
     --info-text-color: #9495a5;
+    --info-button-hover:#494c6b;
+    --info-button-active: #3a7cfd;
 }
 
 body {
@@ -66,6 +71,10 @@ header form input {
     color: var(--input-color);
 }
 
+header form input::placeholder {
+    color: var(--placeholder-color);
+}
+
 header form button {
     padding: 0.75rem;
     border-radius: 0.3125rem;
@@ -75,7 +84,6 @@ header form button {
 }
 
 main {
-    min-height: calc(100vh - 12.5rem);
     padding-inline: 1.75rem;
 }
 
@@ -149,7 +157,44 @@ main {
     font-size: 0.875rem;
 }
 
+.botoes .active {
+    color: var(--info-button-active);
+}
+
+
 @media(min-width: 1000px) {
+    header {
+        background-image: var(--bg-header-desktop);
+        height: 18.75rem;
+        padding-top: 4.37rem;
+    }
+
+    header form input {
+        padding: 1.25rem 1.5rem;
+        font-size: 1.125rem;
+    }
+
+    header form button {
+        font-size: 1.125rem;
+    }
+
+    header form button:hover {
+        cursor: pointer;
+        background: var(--button-color-hover);
+    }
+
+    .tarefas {
+        margin-top: -3rem;
+    }
+
+    .tarefas .tarefa {
+        padding: 1.25rem 1.5rem;
+    }
+
+    .tarefa div {
+        font-size: 1.125rem;
+    }
+
     section.botoes {
         display: none;
     }
@@ -158,6 +203,14 @@ main {
         display: flex;
         padding: 0;
         margin: 0;
+    }
+
+    .informações {
+        font-size: 0.875rem;
+    }
+
+    .informações a:hover {
+        color: var(--info-button-hover);
     }
 
     .tarefa button {
@@ -173,4 +226,5 @@ main {
     .tarefa:hover button {
         visibility: initial;
     }
+
 }
