Criação das variáveis do tema dark

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,400;1,700&family=Titillium+Web:wght@400;600;700&display=swap" rel="stylesheet">
     <title>Todo App</title>
 </head>
-<body>
+<body class="dark">
     <header>
         <div>
             <div>
