--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,12 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,400;1,700&family=Titillium+Web:wght@400;600;700&display=swap" rel="stylesheet">
     <title>Todo App</title>
 </head>
-<body class="dark">
+<body>
     <header>
         <div>
             <div>
                 <h1>To Do</h1>
-                <img src="/imagens/moon-icon.png" alt="ícone de lua">
+                <button onclick="alterarTema()">
+                    <img src="/imagens/moon-icon.png" alt="ícone de lua">
+                </button>
             </div>
 
             <form action="">
@@ -25,5 +27,7 @@
     </header>
 
     {{{body}}}
+
+    <script src="/index.js"></script>
 </body>
 </html>
