Filtro de tarefas ativas completo

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -23,7 +23,7 @@
         </div>
         {{/each}}
         <div class="informações">
-            <p>{{quantidadeTarefasAtivas}} tarefas ativas</p> 
+            <p>{{quantidadeTarefas}} tarefas ativas</p> 
 
             <div class="botoes">
                 <a href="/" class="active">Todas</a>
