Filtro de tarefas completas, completo

--- a/views/completa.handlebars
+++ b/views/completa.handlebars
@@ -15,7 +15,7 @@
         </div>
         {{/each}}
         <div class="informações">
-            <p>{{quantidadeTarefasAtivas}} tarefas ativas</p> 
+            <p>{{quantidadeTarefasAtivas}} tarefas completas</p> 
 
             <div class="botoes">
                 <a href="/">Todas</a>
