--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,4 @@
-<main>
+<main>{{#if tarefas}}
     <section class="tarefas">
         {{#each tarefas}}
         <div class="tarefa">
@@ -31,7 +31,7 @@
                 <a href="/completas">Completas</a>
             </div>
 
-            <a href="">Limpar tarefas</a>
+            <a href="/limpartarefas">Limpar tarefas</a>
         </div>
     </section>
 
@@ -41,3 +41,4 @@
         <a href="/completas">Completas</a>
     </section>
 </main>
+{{/if}}
